# notion_task_mcp

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  setup.sh  uninstall.sh
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion_checklist.md
openspec/: project.md
src/notion_task_mcp/: __init__.py  models.py  notion_client.py  server.py
src/notion_task_mcp/tools/: __init__.py  task_tools.py
task/: SKILL.md  config.template.json
task/scripts/: notion_task_cli.py
tests/: test_integration.py
